<resources>
    <string name="app_name">掌上市政(测试版)</string>
    <string name="logo_userName">请输入帐号</string>
    <string name="phone_number">请输入手机号</string>
    <string name="phone_password">请输入验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logo_passWordName">请输入密码</string>
    <string name="report_dealgrade">处置等级：</string>
    <string name="report_dealcategory">处置类别：</string>
    <string name="report_department">受理部门：</string>
    <string name="report_facategory">设施类别：</string>
    <string name="report_faname">设施名称：</string>
    <string name="report_pbtype">病害类型：</string>
    <string name="report_facility">设施材料：</string>
    <string name="report_fasize">材料规格：</string>
    <string name="report_roadname">道路名称：</string>
    <string name="search_road">请输入路名</string>
    <string name="member_title">会员</string>
    <string name="supervise">监管</string>
    <string name="supervise_first">养护管理</string>
    <string name="me">个人中心</string>
    <string name="report_tv_press_audio">按住说话</string>
    <string name="report_tv_record">重录</string>
    <string name="app_tip">提示</string>
    <string name="play_video">视频播放</string>
    <string name="reportimg">上报图片：</string>
    <string name="locationdes">位置描述：</string>
    <string name="myreport_title">病害明细</string>
    <string name="reprote">上报</string>
    <string name="review">审核</string>
    <string name="send">下派</string>
    <string name="deal">处置</string>
    <string name="post">报验</string>
    <string name="check">验收</string>
    <string name="processdetail">病害流程</string>
    <string name="problem_detail">病害明细</string>
    <string name="maintenance">养护作业</string>
    <string name="bottom_first">首页</string>
    <string name="bottom_second">供应商</string>
    <string name="bottom_thrid">监管</string>
    <string name="bottom_fourth">数据</string>
    <string name="bottom_fifth">我的</string>
    <string name="personreport">我要举报</string>
    <string name="historyreport">历史举报</string>
    <string name="howreport">如何举报</string>
    <string name="howtoreport">如何进行举报</string>
    <string name="howreportetitle">1、请按以下八类病害举报：道路设施、交通设施、桥梁设施、照明设施、公共设施、排水设施、河道设施、城市环境。\n
2、上报期间请确保手机GPS处于开启状态，以便于更明确的反应上报事件事实性。\n
3、上报病害需要抓拍三张照片，确定病害图片一张，街道标牌一张，附近明显建筑物一张。\n
4、病害举报图片，要清晰反应病害性质、街道、病害地点和标志性建筑物。\n
5、禁止在骑行或驾车时上报操作，以免发生交通意外。\n
6、我们鼓励您参与实名举报病害信息行为，市政部门会保护举报人的个人隐私。\n</string>
    <string name="camera_tip">需要拍三张照片</string>
    <string name="camera_request_report">请点击上报</string>
    <string name="camera_play">已拍摄</string>
    <string name="camera_played">张照片</string>
    <string name="camera_photoresult">已拍摄3张照片,请点击上报</string>
    <string name="camera_photorequest">请拍满三张照片</string>
    <string name="personreporte_title">问题上报</string>
    <string name="personreporte_phone">上报人电话：</string>
    <string name="personreporte_name">上报人姓名：</string>
    <string name="personreporte_namehint">请输入姓名</string>
    <string name="personreporte_faci">上报设施：</string>
    <string name="personreporte_des">详细描述：</string>
    <string name="personreporte_photo">上报图片：</string>
    <string name="personreporte_loca">上报位置：</string>
    <string name="personreporte_commit">提交审核</string>
    <string name="personreporte_success">上报成功</string>
    <string name="personreporte_fail">网络异常</string>
    <string name="personreporte_commiting">正在上报···</string>
    <string name="person_reproted">此处已经上报过,谢谢</string>
    <string name="locating">正在定位···</string>
    <string name="loading">正在加载数据···</string>
    <string name="memeber_assiation">市政协会</string>
    <string name="memeber_bussiness">市政企业</string>
    <string name="memeber_company">集采企业</string>
    <string name="memeber_mid_title">掌上市政会员服务</string>
    <string name="memeber_bottom_title">推荐会员</string>
    <string name="supervise_title">养护管理</string>
    <string name="supervise_road">道路</string>
    <string name="supervise_bridge">桥梁</string>
    <string name="table_top">掌上市政用户统计表</string>
    <string name="table_mid">掌上市政使用者数据</string>
    <string name="table_bottom">掌上市政用户分布</string>
    <string name="prize">领奖</string>
    <string name="mine_review">我审核过的</string>
    <string name="mine_sign">签到</string>
    <string name="mine_information">我的资料</string>
    <string name="mine_score">我的积分</string>
    <string name="for_us">关于我们</string>
    <string name="mine_update">软件更新</string>
    <string name="mine_share">软件分享</string>
    <string name="mine_appraise">软件评价</string>
    <string name="mine_clean_cache">清理缓存</string>
    <string name="mine_exit">退出登录</string>
    <string name="companyname">北京向阳天科技有限公司</string>
    <string name="connacteus">全国财富招商热线：400-865-2007</string>
    <string name="information_name">姓名：</string>
    <string name="hint_name">请输入姓名</string>
    <string name="information_phone">手机号码：</string>
    <string name="information_department">所属部门：</string>
    <string name="socre_title_left">当前积分</string>
    <string name="socre_title_right">使用帮助</string>
    <string name="socre_title_sign">积分签到及兑换</string>
    <string name="socre_detail">积分明细</string>
    <string name="socre_sign_success">签到成功</string>
    <string name="save_success">保存成功</string>
    <string name="sign_title">签到及领奖</string>
    <string name="sign_simple">普通会员</string>
    <string name="sign_simple_standar">积分100+</string>
    <string name="sign_grent_standar">积分500+</string>
    <string name="sign_super_standar">积分1000+</string>
    <string name="sign_great">市政达人</string>
    <string name="sign_super">超级会员</string>
    <string name="sign_socre">会员积分</string>
    <string name="sign_socre_title">积分</string>
    <string name="sign_getprize">领取</string>
    <string name="prize_title">奖品领取</string>
    <string name="prize_commit">立即申请</string>
    <string name="signed">已签到</string>
    <string name="sign_tip">每天只能签一次</string>
    <string name="sign">签到</string>
    <string name="appraise_title">软件的整体评价</string>
    <string name="appraise_hint">对软件提出的意见</string>
    <string name="appraise_commit">提交评价</string>
    <string name="allreporter">上报人员：</string>
    <string name="problemlocation">病害位置：</string>
    <string name="reportertime">上报时间：</string>
    <string name="review_tv_detail">详细</string>
    <string name="review_tv_pass">通过</string>
    <string name="review_tv_fail">驳回</string>
    <string name="review_tv_nodata">未上报数据</string>
    <string name="report_image">病害图片：</string>
    <string name="report_locaiton">地理位置描述：</string>
    <string name="report_problemdes">病害描述：</string>
    <string name="report_commit">提交</string>
    <string name="report_dialog_title">请选择</string>
    <string name="report_dialog_content1">拍照</string>
    <string name="report_upimg">正在上传图片···</string>
    <string name="report_uploading">开始上传</string>
    <string name="report_imgsuccess">图片上传成功</string>
    <string name="report_dialog_content2">相册</string>
    <string name="report_request">至少选择一张上报图片</string>
    <string name="report_notifica">上报一条新病害</string>
    <string name="report_notifica_title">：新上报一条病害</string>
    <string name="report_error">数据未获取，稍后重试</string>
    <string name="report_imageerror">图片未上报成功</string>
    <string name="report_uperror">数据未上传成功</string>
    <string name="report_success">数据上传成功</string>
    <string name="report_delete_title">删除录音</string>
    <string name="report_delete_video_title">删除视频</string>
    <string name="report_delete_content">确定删除录音?</string>
    <string name="report_delete_video_content">确定删除视频?</string>
    <string name="report_delete_ok">确定</string>
    <string name="report_delete_cancle">取消</string>
    <string name="report_record_little">录音时间太短</string>
    <string name="report_record_max">录音不能超过60s</string>
    <string name="audio_success">音频上传成功</string>
    <string name="video_success">视频上传成功</string>
    <string name="video_fail">视频上传失败</string>
    <string name="audio_fail">音频上传失败</string>
    <string name="disrecord">请先录音</string>
    <string name="reportmore">播放错误，请重录</string>
    <string name="reportlocation">请填写位置描述</string>
    <string name="add_video">添加视频</string>
    <string name="home_notnetwork">网络异常</string>
    <string name="home_refresh">刷新</string>
    <string name="review_nodata">未上报数据</string>
    <string name="deal_navi">导航</string>
    <string name="deal_nodata">没有需要您处置数据</string>
    <string name="check_nodata">没有需要您处置数据</string>
    <string name="send_request_time">要求时间</string>
    <string name="send_send">派发</string>
    <string name="send_fail">驳回</string>
    <string name="send_nodata">没有下派数据</string>
    <string name="check_ireport">上报前</string>
    <string name="check_irepair">维修后</string>
    <string name="check_report">上报人：</string>
    <string name="check_dealer">处置人：</string>
    <string name="check_detail_title">养护作业</string>
    <string name="check_detail_reviewer">审核人员：</string>
    <string name="check_detail_dealer">处置人员：</string>
    <string name="check_detail_reporttime">上报时间：</string>
    <string name="check_detail_reviewtime">审核时间：</string>
    <string name="check_detail_repair">维修备注：</string>
    <string name="check_detail_location">详细位置：</string>
    <string name="check_detail_requesttime">要求完成时间：</string>
    <string name="check_detail_resultetime">实际完成时间：</string>
    <string name="check_detail_ideal">处置前</string>
    <string name="check_detail_deali">处置后</string>
    <string name="process_tasknumer">任务单号：</string>
    <string name="process_report">上报人：</string>
    <string name="process_review">审核人：</string>
    <string name="process_deal">处置人：</string>
    <string name="process_check">验收人：</string>
    <string name="process_redeal">处置前照片</string>
    <string name="process_dealing">处置中照片</string>
    <string name="process_dealed">处置后照片</string>
    <string name="employee">职位：</string>
    <string name="employee_title">职称：</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">读取手机权限</string>
    <string name="permission_call_phone_hint">请打开电话权限</string>
    <string name="permission_camera_hint">请打开拍照权限</string>
    <string name="permission_access_fine_location_hint">请打开位置信息，提供定位信息</string>
    <string name="permission_access_coarse_location_hint">请打开位置信息，提供定位信息</string>
    <string name="permission_read_external_hint">请允许读取SD卡</string>
    <string name="permission_write_external_hint">请允许读写SD卡</string>
    <string name="permission_recode_audio_hint">请打开录音权限</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="uncheck_redeal">处置前：</string>
    <string name="uncheck_deal">处置中：</string>
    <string name="uncheck_dealed">处置后：</string>
    <string name="myreviewed">我的审核</string>
    <string name="myreviewed_nodata">您未审核过</string>
    <string name="mydealed">我的处置</string>
    <string name="mydealed_nodata">您未处置过</string>
    <string name="myreported_nodata">您未上报过</string>
    <string name="myreported">我的上报</string>
    <string name="membershowtitle">会员展示</string>
    <string name="join">加盟</string>
    <string name="alltitle">全国掌上市政上线人数：</string>
    <string name="personloca">人员定位</string>
    <string name="problemdeal">病害处置</string>
    <string name="carmanage">车辆管理</string>
    <string name="facilitymanage">设施管理</string>
    <string name="waterwaring">防汛警告</string>
    <string name="table_nodata">数据未加载</string>
    <string name="table_top_title">掌上市政使用数据</string>
    <string name="visitor">游客</string>
    <string name="visitor_department">社会群众</string>
    <string name="visitor_login_success">登录成功</string>
    <string name="visitor_VerificationCode">验证码已发送</string>
    <string name="visitor_phone_error">手机号格式错误</string>
    <string name="visitor_reget">重新获取</string>
    <string name="visitor_resend">重新发送</string>
    <string name="visitor_datanull">号码不能为空</string>
    <string name="visitor_neterror">服务器获取数据异常</string>
    <string name="to_home">请到首页去上报</string>
    <string name="logining">正在登录···</string>
</resources>