<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.xytsz.xytsz.ui.NoScrollViewpager
            android:id="@+id/homeactivity_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:visibility="gone"
            android:background="@color/white"
            android:id="@+id/rl_notonline"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_nonet"
                android:gravity="center"
                android:text="@string/home_notnetwork"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/btn_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_refresh"
                android:textSize="15sp"
                android:textColor="@color/miantitle"
                android:text="@string/home_refresh"
                android:background="@drawable/selector_btn_refresh"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />




        </RelativeLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/home_progressbar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_loading"
            />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/cc_dark_fade"/>

    <!--底部按钮-->
    <RadioGroup
        android:id="@+id/homeactivity_rg_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@color/white"
        >
        <!-- checked : 是否选中RadioButton true:选中,false:不选中
             button : 设置单选按钮的样式,@null : 不使用样式
             drawableTop : 在文本的顶部设置图片
        -->
        <RadioButton
            android:id="@+id/homeactivity_rbtn_working"
            style="@style/HomeActivityRadioButtonStyle"
            android:drawableTop="@mipmap/button_setting_nor"
            android:text="@string/bottom_second" />

        <RadioButton
            android:id="@+id/homeactivity_rbtn_more"
            style="@style/HomeActivityRadioButtonStyle"
            android:drawableTop="@mipmap/button_supervise_nor"
            android:text="@string/bottom_thrid" />

        <RadioButton
            android:id="@+id/homeactivity_rbtn_home"
            style="@style/HomeActivityRadioButtonStyle"
            android:drawableTop="@mipmap/button_home_nor"
            android:text="@string/bottom_first" />

        <RadioButton
            android:id="@+id/homeactivity_rbtn_data"
            style="@style/HomeActivityRadioButtonStyle"
            android:drawableTop="@mipmap/button_data_nor"
            android:text="@string/bottom_fourth" />

        <RadioButton
            android:id="@+id/homeactivity_rbtn_me"
            style="@style/HomeActivityRadioButtonStyle"
            android:drawableTop="@mipmap/button_me_nor"
            android:text="@string/bottom_fifth" />


    </RadioGroup>
</LinearLayout>