<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/iv_send_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/rl_send_road_detail"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:paddingLeft="3dp"
        >
        <TextView
            android:id="@+id/tv_sendroad_vname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_dealgrade"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_send_Vname"
            android:layout_toRightOf="@+id/tv_sendroad_vname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="一级病害"
            android:textSize="16sp" />

        <TextView
            android:layout_below="@+id/tv_send_Vname"
            android:id="@+id/tv_send_Pname"
            android:layout_toRightOf="@+id/tv_sendroad_Pname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="张三三"
            android:textSize="16sp" />
        <TextView
            android:layout_below="@+id/tv_send_Vname"
            android:id="@+id/tv_sendroad_Pname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/allreporter"
            android:textSize="16sp" />

        <TextView
            android:layout_below="@+id/tv_send_Pname"
            android:id="@+id/tv_send_date"
            android:layout_toRightOf="@+id/tv_sendroad_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="2017年3月8日11:09"
            android:textSize="16sp" />
        <TextView
            android:layout_below="@+id/tv_send_Pname"
            android:id="@+id/tv_sendroad_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/reportertime"
            android:textSize="16sp" />

    </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.xytsz.xytsz.ui.TimeChoiceButton
            android:id="@+id/bt_send_choice"
            android:text="@string/send_request_time"
            android:layout_weight="1"
            android:layout_below="@+id/bt_send_back"
            android:background="@color/cc_orage"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />
        <View
            android:background="@color/cc_dark_fade"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/send_send"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_weight="1"
            android:id="@+id/bt_send_send"
            android:background="@color/cc_orage"
            android:layout_below="@+id/bt_send_choice"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />


        <TextView
            android:text="@string/send_fail"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/bt_send_back"
            android:background="@color/cc_orage_red"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

    </LinearLayout>

</LinearLayout>