<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.dalong.marqueeview.MarqueeView
            android:id="@+id/tv_marqueeview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#FFE5D7"
            android:gravity="center"
            app:direction="left"
            app:isRepeat="true"
            app:speed="50"
            app:startPoint="end"
            app:textSize="16sp"
            app:textcolor="@color/cc_supervise" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_person_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:drawableTop="@mipmap/icon_my_report"
                android:gravity="center"
                android:text="@string/personreport" />

            <TextView
                android:id="@+id/tv_person_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:drawableTop="@mipmap/icon_my_history"
                android:gravity="center"
                android:text="@string/historyreport" />

            <TextView
                android:id="@+id/tv_person_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:drawableTop="@mipmap/icon_my_help"
                android:gravity="center"
                android:text="@string/howreport" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/graybackground" />
        <!--帮助-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/personreport_dblf"
                    android:drawablePadding="8dp"
                    android:text="@string/howtoreport"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/graybackground" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:padding="6dp"
                    android:src="@mipmap/iv_citypersonreport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/howreportetitle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>