<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_check_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_ireport"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/cc_light_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_irepair"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_check_title"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/cc_light_dark" />
    <!--第一段-->
    <LinearLayout
        android:id="@+id/ll_check_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_check_title"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_check_report"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/cc_light_dark" />

        <ImageView
            android:id="@+id/iv_check_dealed"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <!--  -->

    <!--第三段-->
    <LinearLayout
        android:id="@+id/ll_check_deal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_check_report"
        android:orientation="horizontal">

        <LinearLayout
            android:padding="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_report"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_check_reporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="张三三"
                android:textSize="16sp" />
        </LinearLayout>
        <!--处置规格-->
        <LinearLayout
            android:padding="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_dealer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_check_dealer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="王美丽"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="审核人："
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_check_reviewer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="李开心"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>